passport, session, auth routes and configuration
